--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -98,7 +98,7 @@
 <script type="module">
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
   import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-  import { getDatabase, ref, get, update, child } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+  import { getDatabase, ref, get, update } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
   const app = initializeApp({
     apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
@@ -113,11 +113,8 @@
   const auth = getAuth(app);
   const db = getDatabase(app);
 
-  const logoutBtn = document.getElementById('logout-btn');
-  logoutBtn.addEventListener('click', () => signOut(auth));
-
-  const exportBtn = document.getElementById('export-btn');
-  exportBtn.addEventListener('click', exportLogsToCSV);
+  document.getElementById('logout-btn').onclick = () => signOut(auth);
+  document.getElementById('export-btn').onclick = exportLogsToCSV;
 
   const tableBody = document.querySelector('#vehicle-table tbody');
 
@@ -143,9 +140,11 @@
       const row = document.createElement('tr');
       if (overdue) row.classList.add('alarm-row');
 
+      // Cells
       const nameCell = document.createElement('td');
       nameCell.innerHTML = overdue ? `🚨 ${name}` : name;
 
+      const keyCell = document.createElement('td');
       const keyBtn = document.createElement('button');
       keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
       keyBtn.className = 'toggle-btn ' + keyStatus;
@@ -159,10 +158,12 @@
         });
         location.reload();
       };
+      keyCell.appendChild(keyBtn);
 
       const heldByCell = document.createElement('td');
       heldByCell.textContent = keyHeldBy;
 
+      const vehicleCell = document.createElement('td');
       const vehicleBtn = document.createElement('button');
       vehicleBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
       vehicleBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
@@ -174,7 +175,9 @@
         });
         location.reload();
       };
+      vehicleCell.appendChild(vehicleBtn);
 
+      const alarmCell = document.createElement('td');
       const alarmBtn = document.createElement('button');
       alarmBtn.textContent = alarm ? 'Disable Alarm' : 'Enable Alarm';
       alarmBtn.className = 'toggle-btn alarm';
@@ -182,7 +185,9 @@
         await update(ref(db, 'vehicles/' + name), { alarm: !alarm });
         location.reload();
       };
+      alarmCell.appendChild(alarmBtn);
 
+      const triggerCell = document.createElement('td');
       const triggerBtn = document.createElement('button');
       triggerBtn.textContent = '🔔 Trigger';
       triggerBtn.className = 'toggle-btn alarm';
@@ -196,32 +201,30 @@
         });
         location.reload();
       };
+      triggerCell.appendChild(triggerBtn);
 
-      row.innerHTML = '';
+      // Append cells
       row.appendChild(nameCell);
-      row.appendChild(Object.assign(document.createElement('td'), { appendChild: () => keyBtn }));
+      row.appendChild(keyCell);
       row.appendChild(heldByCell);
-      row.appendChild(Object.assign(document.createElement('td'), { appendChild: () => vehicleBtn }));
-      row.appendChild(Object.assign(document.createElement('td'), { appendChild: () => alarmBtn }));
-      row.appendChild(Object.assign(document.createElement('td'), { appendChild: () => triggerBtn }));
+      row.appendChild(vehicleCell);
+      row.appendChild(alarmCell);
+      row.appendChild(triggerCell);
       tableBody.appendChild(row);
     });
   });
 
   async function exportLogsToCSV() {
-    const logsSnap = await get(ref(db, 'vehicleLogs'));
-    if (!logsSnap.exists()) {
-      alert('No logs to export.');
-      return;
-    }
+    const snap = await get(ref(db, 'vehicleLogs'));
+    if (!snap.exists()) return alert('No logs to export.');
 
-    const logs = logsSnap.val();
+    const logs = snap.val();
     const rows = [["Vehicle", "User Email", "Action", "Timestamp (Yukon Time)"]];
 
-    Object.entries(logs).forEach(([vehicle, logEntries]) => {
-      Object.values(logEntries).forEach(log => {
-        const date = new Date(log.timestamp).toLocaleString('en-CA', { timeZone: 'America/Whitehorse' });
-        rows.push([vehicle, log.userEmail || '', log.action, date]);
+    Object.entries(logs).forEach(([vehicle, entries]) => {
+      Object.values(entries).forEach(entry => {
+        const time = new Date(entry.timestamp).toLocaleString('en-CA', { timeZone: 'America/Whitehorse' });
+        rows.push([vehicle, entry.userEmail || '', entry.action, time]);
       });
     });
 
