--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -113,123 +113,135 @@
   const auth = getAuth(app);
   const db = getDatabase(app);
 
-  document.getElementById('logout-btn').onclick = () => signOut(auth);
-  document.getElementById('export-btn').onclick = exportLogsToCSV;
+  const logoutBtn = document.getElementById('logout-btn');
+  logoutBtn.addEventListener('click', () => signOut(auth));
+
+  const exportBtn = document.getElementById('export-btn');
+  exportBtn.addEventListener('click', exportLogsToCSV);
 
   const tableBody = document.querySelector('#vehicle-table tbody');
 
   onAuthStateChanged(auth, async user => {
     if (!user) return window.location.href = 'index.html';
 
-    const snap = await get(ref(db, 'vehicles'));
-    if (!snap.exists()) return;
+    try {
+      const snap = await get(ref(db, 'vehicles'));
+      if (!snap.exists()) {
+        console.warn('No vehicle data available.');
+        return;
+      }
 
-    const now = Date.now();
-    const vehicles = snap.val();
+      const now = Date.now();
+      const vehicles = snap.val();
 
-    Object.entries(vehicles).forEach(([name, data]) => {
-      const keyStatus = data.keyStatus || 'atFrontDesk';
-      const keyHeldBy = data.keyHeldBy || '';
-      const vehicleStatus = data.status || 'available';
-      const lastKeyChange = data.lastKeyChange || 0;
-      const alarm = data.alarm === true;
+      Object.entries(vehicles).forEach(([name, data]) => {
+        const keyStatus = data.keyStatus || 'atFrontDesk';
+        const keyHeldBy = data.keyHeldBy || '';
+        const vehicleStatus = data.status || 'available';
+        const lastKeyChange = data.lastKeyChange || 0;
+        const alarm = data.alarm === true;
 
-      const elapsed = now - lastKeyChange;
-      const overdue = elapsed > 3600000 && keyStatus === 'withStaff' && vehicleStatus === 'available' && alarm;
+        const elapsed = now - lastKeyChange;
+        const overdue = elapsed > 3600000 && keyStatus === 'withStaff' && vehicleStatus === 'available' && alarm;
 
-      const row = document.createElement('tr');
-      if (overdue) row.classList.add('alarm-row');
+        const row = document.createElement('tr');
+        if (overdue) row.classList.add('alarm-row');
 
-      const createCell = (content) => {
-        const td = document.createElement('td');
-        if (content instanceof HTMLElement) td.appendChild(content);
-        else td.textContent = content;
-        return td;
-      };
+        const createCell = (content) => {
+          const td = document.createElement('td');
+          if (content instanceof HTMLElement) td.appendChild(content);
+          else td.textContent = content;
+          return td;
+        };
 
-      const nameCell = createCell(overdue ? `🚨 ${name}` : name);
+        const keyBtn = document.createElement('button');
+        keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
+        keyBtn.className = 'toggle-btn ' + keyStatus;
+        keyBtn.onclick = async () => {
+          const toStaff = keyStatus === 'atFrontDesk';
+          await update(ref(db, 'vehicles/' + name), {
+            keyStatus: toStaff ? 'withStaff' : 'atFrontDesk',
+            keyHeldBy: toStaff ? user.email : null,
+            lastKeyChange: Date.now(),
+            alarm: toStaff
+          });
+          location.reload();
+        };
 
-      const keyBtn = document.createElement('button');
-      keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
-      keyBtn.className = 'toggle-btn ' + keyStatus;
-      keyBtn.onclick = async () => {
-        const toStaff = keyStatus === 'atFrontDesk';
-        await update(ref(db, 'vehicles/' + name), {
-          keyStatus: toStaff ? 'withStaff' : 'atFrontDesk',
-          keyHeldBy: toStaff ? user.email : null,
-          lastKeyChange: Date.now(),
-          alarm: toStaff
-        });
-        location.reload();
-      };
+        const vehicleBtn = document.createElement('button');
+        vehicleBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
+        vehicleBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
+        vehicleBtn.onclick = async () => {
+          const isOut = vehicleStatus === 'available';
+          await update(ref(db, 'vehicles/' + name), {
+            status: isOut ? 'signedOut' : 'available',
+            alarm: isOut ? false : alarm
+          });
+          location.reload();
+        };
 
-      const vehicleBtn = document.createElement('button');
-      vehicleBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
-      vehicleBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
-      vehicleBtn.onclick = async () => {
-        const isOut = vehicleStatus === 'available';
-        await update(ref(db, 'vehicles/' + name), {
-          status: isOut ? 'signedOut' : 'available',
-          alarm: isOut ? false : alarm
-        });
-        location.reload();
-      };
+        const alarmBtn = document.createElement('button');
+        alarmBtn.textContent = alarm ? 'Disable Alarm' : 'Enable Alarm';
+        alarmBtn.className = 'toggle-btn alarm';
+        alarmBtn.onclick = async () => {
+          await update(ref(db, 'vehicles/' + name), { alarm: !alarm });
+          location.reload();
+        };
 
-      const alarmBtn = document.createElement('button');
-      alarmBtn.textContent = alarm ? 'Disable Alarm' : 'Enable Alarm';
-      alarmBtn.className = 'toggle-btn alarm';
-      alarmBtn.onclick = async () => {
-        await update(ref(db, 'vehicles/' + name), { alarm: !alarm });
-        location.reload();
-      };
+        const triggerBtn = document.createElement('button');
+        triggerBtn.textContent = '🔔 Trigger';
+        triggerBtn.className = 'toggle-btn alarm';
+        triggerBtn.onclick = async () => {
+          const oneHourAgo = Date.now() - 3600001;
+          await update(ref(db, 'vehicles/' + name), {
+            alarm: true,
+            lastKeyChange: oneHourAgo,
+            keyStatus: 'withStaff',
+            status: 'available'
+          });
+          location.reload();
+        };
 
-      const triggerBtn = document.createElement('button');
-      triggerBtn.textContent = '🔔 Trigger';
-      triggerBtn.className = 'toggle-btn alarm';
-      triggerBtn.onclick = async () => {
-        const oneHourAgo = Date.now() - 3600001;
-        await update(ref(db, 'vehicles/' + name), {
-          alarm: true,
-          lastKeyChange: oneHourAgo,
-          keyStatus: 'withStaff',
-          status: 'available'
-        });
-        location.reload();
-      };
-
-      row.appendChild(nameCell);
-      row.appendChild(createCell(keyBtn));
-      row.appendChild(createCell(keyHeldBy));
-      row.appendChild(createCell(vehicleBtn));
-      row.appendChild(createCell(alarmBtn));
-      row.appendChild(createCell(triggerBtn));
-
-      tableBody.appendChild(row);
-    });
+        row.appendChild(createCell(overdue ? `🚨 ${name}` : name));
+        row.appendChild(createCell(keyBtn));
+        row.appendChild(createCell(keyHeldBy));
+        row.appendChild(createCell(vehicleBtn));
+        row.appendChild(createCell(alarmBtn));
+        row.appendChild(createCell(triggerBtn));
+        tableBody.appendChild(row);
+      });
+    } catch (error) {
+      console.error("Failed to load fleetmaster data:", error);
+    }
   });
 
   async function exportLogsToCSV() {
-    const snap = await get(ref(db, 'vehicleLogs'));
-    if (!snap.exists()) return alert('No logs to export.');
+    try {
+      const snap = await get(ref(db, 'vehicleLogs'));
+      if (!snap.exists()) return alert('No logs to export.');
 
-    const logs = snap.val();
-    const rows = [["Vehicle", "User Email", "Action", "Timestamp (Yukon Time)"]];
+      const logs = snap.val();
+      const rows = [["Vehicle", "User Email", "Action", "Timestamp (Yukon Time)"]];
 
-    Object.entries(logs).forEach(([vehicle, entries]) => {
-      Object.values(entries).forEach(entry => {
-        const time = new Date(entry.timestamp).toLocaleString('en-CA', { timeZone: 'America/Whitehorse' });
-        rows.push([vehicle, entry.userEmail || '', entry.action, time]);
+      Object.entries(logs).forEach(([vehicle, entries]) => {
+        Object.values(entries).forEach(entry => {
+          const time = new Date(entry.timestamp).toLocaleString('en-CA', { timeZone: 'America/Whitehorse' });
+          rows.push([vehicle, entry.userEmail || '', entry.action, time]);
+        });
       });
-    });
 
-    const csv = rows.map(r => r.join(',')).join('\n');
-    const blob = new Blob([csv], { type: 'text/csv' });
-    const a = document.createElement('a');
-    a.href = URL.createObjectURL(blob);
-    a.download = 'fleet_logs.csv';
-    a.click();
+      const csv = rows.map(r => r.join(',')).join('\n');
+      const blob = new Blob([csv], { type: 'text/csv' });
+      const a = document.createElement('a');
+      a.href = URL.createObjectURL(blob);
+      a.download = 'fleet_logs.csv';
+      a.click();
+    } catch (error) {
+      console.error("Error exporting logs:", error);
+    }
   }
 </script>
+
 
 </body>
 </html>
