--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -124,95 +124,88 @@
   onAuthStateChanged(auth, async user => {
     if (!user) return window.location.href = 'index.html';
 
-    try {
-      const snap = await get(ref(db, 'vehicles'));
-      if (!snap.exists()) {
-        console.warn('No vehicle data available.');
-        return;
-      }
+    const now = Date.now();
+    const snap = await get(ref(db, 'vehicles'));
+    if (!snap.exists()) return;
 
-      const now = Date.now();
-      const vehicles = snap.val();
+    const vehicles = snap.val();
 
-      Object.entries(vehicles).forEach(([name, data]) => {
-        const keyStatus = data.keyStatus || 'atFrontDesk';
-        const keyHeldBy = data.keyHeldBy || '';
-        const vehicleStatus = data.status || 'available';
-        const lastKeyChange = data.lastKeyChange || 0;
-        const alarm = data.alarm === true;
+    Object.entries(vehicles).forEach(([name, data]) => {
+      const keyStatus = data.keyStatus || 'atFrontDesk';
+      const keyHeldBy = data.keyHeldBy || '';
+      const vehicleStatus = data.status || 'available';
+      const lastKeyChange = data.lastKeyChange || 0;
+      const alarm = data.alarm === true;
 
-        const elapsed = now - lastKeyChange;
-        const overdue = elapsed > 3600000 && keyStatus === 'withStaff' && vehicleStatus === 'available' && alarm;
+      const elapsed = now - lastKeyChange;
+      const overdue = elapsed > 3600000 && keyStatus === 'withStaff' && vehicleStatus === 'available' && alarm;
 
-        const row = document.createElement('tr');
-        if (overdue) row.classList.add('alarm-row');
+      const row = document.createElement('tr');
+      if (overdue) row.classList.add('alarm-row');
 
-        const createCell = (content) => {
-          const td = document.createElement('td');
-          if (content instanceof HTMLElement) td.appendChild(content);
-          else td.textContent = content;
-          return td;
-        };
+      const keyBtn = document.createElement('button');
+      keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
+      keyBtn.className = 'toggle-btn ' + keyStatus;
+      keyBtn.onclick = async () => {
+        const toStaff = keyStatus === 'atFrontDesk';
+        await update(ref(db, 'vehicles/' + name), {
+          keyStatus: toStaff ? 'withStaff' : 'atFrontDesk',
+          keyHeldBy: toStaff ? user.email : null,
+          lastKeyChange: Date.now(),
+          alarm: toStaff
+        });
+        location.reload();
+      };
 
-        const keyBtn = document.createElement('button');
-        keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
-        keyBtn.className = 'toggle-btn ' + keyStatus;
-        keyBtn.onclick = async () => {
-          const toStaff = keyStatus === 'atFrontDesk';
-          await update(ref(db, 'vehicles/' + name), {
-            keyStatus: toStaff ? 'withStaff' : 'atFrontDesk',
-            keyHeldBy: toStaff ? user.email : null,
-            lastKeyChange: Date.now(),
-            alarm: toStaff
-          });
-          location.reload();
-        };
+      const vehicleBtn = document.createElement('button');
+      vehicleBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
+      vehicleBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
+      vehicleBtn.onclick = async () => {
+        const isOut = vehicleStatus === 'available';
+        await update(ref(db, 'vehicles/' + name), {
+          status: isOut ? 'signedOut' : 'available',
+          alarm: isOut ? false : alarm
+        });
+        location.reload();
+      };
 
-        const vehicleBtn = document.createElement('button');
-        vehicleBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
-        vehicleBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
-        vehicleBtn.onclick = async () => {
-          const isOut = vehicleStatus === 'available';
-          await update(ref(db, 'vehicles/' + name), {
-            status: isOut ? 'signedOut' : 'available',
-            alarm: isOut ? false : alarm
-          });
-          location.reload();
-        };
+      const alarmBtn = document.createElement('button');
+      alarmBtn.textContent = alarm ? 'Disable Alarm' : 'Enable Alarm';
+      alarmBtn.className = 'toggle-btn alarm';
+      alarmBtn.onclick = async () => {
+        await update(ref(db, 'vehicles/' + name), { alarm: !alarm });
+        location.reload();
+      };
 
-        const alarmBtn = document.createElement('button');
-        alarmBtn.textContent = alarm ? 'Disable Alarm' : 'Enable Alarm';
-        alarmBtn.className = 'toggle-btn alarm';
-        alarmBtn.onclick = async () => {
-          await update(ref(db, 'vehicles/' + name), { alarm: !alarm });
-          location.reload();
-        };
+      const triggerBtn = document.createElement('button');
+      triggerBtn.textContent = '🔔 Trigger';
+      triggerBtn.className = 'toggle-btn alarm';
+      triggerBtn.onclick = async () => {
+        const oneHourAgo = Date.now() - 3600001;
+        await update(ref(db, 'vehicles/' + name), {
+          alarm: true,
+          lastKeyChange: oneHourAgo,
+          keyStatus: 'withStaff',
+          status: 'available'
+        });
+        location.reload();
+      };
 
-        const triggerBtn = document.createElement('button');
-        triggerBtn.textContent = '🔔 Trigger';
-        triggerBtn.className = 'toggle-btn alarm';
-        triggerBtn.onclick = async () => {
-          const oneHourAgo = Date.now() - 3600001;
-          await update(ref(db, 'vehicles/' + name), {
-            alarm: true,
-            lastKeyChange: oneHourAgo,
-            keyStatus: 'withStaff',
-            status: 'available'
-          });
-          location.reload();
-        };
+      const createCell = content => {
+        const td = document.createElement('td');
+        if (content instanceof HTMLElement) td.appendChild(content);
+        else td.textContent = content;
+        return td;
+      };
 
-        row.appendChild(createCell(overdue ? `🚨 ${name}` : name));
-        row.appendChild(createCell(keyBtn));
-        row.appendChild(createCell(keyHeldBy));
-        row.appendChild(createCell(vehicleBtn));
-        row.appendChild(createCell(alarmBtn));
-        row.appendChild(createCell(triggerBtn));
-        tableBody.appendChild(row);
-      });
-    } catch (error) {
-      console.error("Failed to load fleetmaster data:", error);
-    }
+      row.appendChild(createCell(overdue ? `🚨 ${name}` : name));
+      row.appendChild(createCell(keyBtn));
+      row.appendChild(createCell(keyHeldBy));
+      row.appendChild(createCell(vehicleBtn));
+      row.appendChild(createCell(alarmBtn));
+      row.appendChild(createCell(triggerBtn));
+      tableBody.appendChild(row);
+    });
   });
 
   async function exportLogsToCSV() {
@@ -241,7 +234,6 @@
     }
   }
 </script>
-
 
 </body>
 </html>
