--- a/calendar.html
+++ b/calendar.html
@@ -7,7 +7,7 @@
 
   <!-- FullCalendar CSS -->
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.css" rel="stylesheet" />
-  
+
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -15,146 +15,208 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 
+  <!-- Optional External Styles -->
+  <link rel="stylesheet" href="style.css">
+
   <style>
-    body { margin: 0; padding: 0; font-family: sans-serif; }
-    header { background: #333; color: white; display: flex; justify-content: space-between; align-items: center; padding: 1rem; }
-    #logout-btn { cursor: pointer; padding: 0.5rem 1rem; background: #666; color: white; border-radius: 4px; }
-    .container { max-width: 1200px; margin: 1rem auto; padding: 1rem; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); background: white; }
-    select, input[type="date"], input[type="time"], input[type="text"] { font-size: 1rem; padding: 0.3rem; margin: 0.3rem 0; }
-    #booking-form { display: flex; flex-wrap: wrap; gap: 1rem; align-items: center; }
-    .calendar-and-details { display: flex; gap: 1rem; }
-    .details-section { border-left: 1px solid #ccc; padding-left: 1rem; }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+    }
+    header {
+      background: #333;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
+    }
+    #logout-btn {
+      cursor: pointer;
+      padding: 0.5rem 1rem;
+      border: none;
+      background: #666;
+      color: white;
+      border-radius: 4px;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 1rem auto;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    #booking-form {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+    #booking-form label {
+      display: flex;
+      flex-direction: column;
+      font-weight: bold;
+    }
+    .calendar-and-details {
+      display: flex;
+      gap: 1rem;
+    }
+    .calendar-section { flex: 1; }
+    .details-section {
+      flex: 0 0 300px;
+      border-left: 1px solid #ccc;
+      padding-left: 1rem;
+    }
   </style>
 </head>
-
 <body>
-  <header>
-    <div>Fleet Calendar</div>
-    <div id="user-info">Checking auth...</div>
-    <button id="logout-btn" style="display:none;">Logout</button>
-  </header>
+<header>
+  <div>Fleet Calendar</div>
+  <div id="user-info">Checking auth...</div>
+  <button id="logout-btn" style="display:none;">Logout</button>
+</header>
 
-  <div class="container">
-    <h2>YFNED Fleet Calendar</h2>
+<div class="container">
+  <h2>YFNED Fleet Calendar</h2>
 
-    <div>
-      <label>Select a Vehicle:</label>
-      <select id="vehicle-select">
-        <option value="01-20 2021 Red Traverse CM335">2021 Red Traverse CM335</option>
-        <option value="02-20 2021 Black Traverse CM366">2021 Black Traverse CM366</option>
-        <!-- Add your remaining vehicles here -->
-      </select>
-    </div>
+  <label for="vehicle-select">Select a Vehicle:</label>
+  <select id="vehicle-select">
+    <option value="01-20 2021 Red Traverse CM335">2021 Red Traverse CM335</option>
+    <option value="02-20 2021 Black Traverse CM366">2021 Black Traverse CM366</option>
+    <option value="03-21 2021 Grey Traverse CN360">2021 Grey Traverse CN360</option>
+    <!-- Add the rest of your vehicles here -->
+  </select>
 
-    <form id="booking-form">
-      <label>Date (Mon-Fri only):<input type="date" id="booking-date" /></label>
-      <label>Start Time:<input type="text" id="booking-start" /></label>
-      <label>End Time:<input type="text" id="booking-end" /></label>
-      <button type="submit" id="bookVehicleBtn">Book Vehicle</button>
-    </form>
+  <form id="booking-form">
+    <label>
+      Date (Mon-Fri only):
+      <input type="date" id="booking-date" />
+    </label>
+    <label>
+      Start Time (6AM - 9PM):
+      <input type="text" id="booking-start" />
+    </label>
+    <label>
+      End Time (6AM - 9PM):
+      <input type="text" id="booking-end" />
+    </label>
+    <button id="bookVehicleBtn">Book Vehicle</button>
+  </form>
 
-    <div class="calendar-and-details">
+  <div class="calendar-and-details">
+    <div class="calendar-section">
+      <h1 id="vehicle-schedule-heading"></h1>
       <div id="calendar"></div>
-      <div class="details-section">
-        <h3>Selected Date: <span id="selected-date-text"></span></h3>
-        <div id="date-bookings-list">No date selected yet.</div>
-      </div>
+    </div>
+    <div class="details-section">
+      <h3>Selected Date: <span id="selected-date-text"></span></h3>
+      <div id="date-bookings-list">No bookings.</div>
     </div>
   </div>
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.js"></script>
 
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
-    import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-    import { getDatabase, ref, get, push, set } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+<script type="module">
+import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
+import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
+import { getDatabase, ref, get, push, set } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
-      authDomain: "yfned-fleet-nfc.firebaseapp.com",
-      databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
-      projectId: "yfned-fleet-nfc",
-      storageBucket: "yfned-fleet-nfc.appspot.com",
-      messagingSenderId: "482363667898",
-      appId: "1:482363667898:web:4b0364e891a221e9631983"
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
+  authDomain: "yfned-fleet-nfc.firebaseapp.com",
+  databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
+  projectId: "yfned-fleet-nfc",
+  storageBucket: "yfned-fleet-nfc.appspot.com",
+  messagingSenderId: "482363667898",
+  appId: "1:482363667898:web:4b0364e891a221e9631983"
+};
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getDatabase(app);
-    let currentUser, calendar;
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getDatabase(app);
 
-    onAuthStateChanged(auth, user => {
-      if (!user) window.location.href = 'index.html';
-      currentUser = user;
-      $('#user-info').text(`Logged in as: ${user.email}`);
-      $('#logout-btn').show();
+let currentUser = null;
 
-      $('#booking-start, #booking-end').timepicker({
-        timeFormat: 'h:mm p', interval: 30, minTime: '6:00am', maxTime: '9:00pm'
-      });
+onAuthStateChanged(auth, (user) => {
+  if (!user) {
+    window.location.href = 'index.html';
+  } else {
+    currentUser = user;
+    $('#user-info').text(`Logged in as: ${user.email}`);
+    $('#logout-btn').show();
+    initTimepicker();
+    initCalendar();
+    updateHeading($('#vehicle-select').val());
+  }
+});
 
-      initCalendar();
-      updateHeading(vehicleSelect.value);
-    });
+$('#logout-btn').click(() => signOut(auth));
 
-    $('#logout-btn').click(() => signOut(auth));
+function initTimepicker() {
+  $('#booking-start, #booking-end').timepicker({
+    timeFormat: 'h:mm p', interval: 30, minTime: '6:00am', maxTime: '9:00pm'
+  });
+}
 
-    function initCalendar() {
-      calendar = new FullCalendar.Calendar($('#calendar')[0], {
-        initialView: 'dayGridMonth',
-        events: fetchEvents,
-        dateClick: info => {
-          $('#booking-date').val(info.dateStr);
-          $('#selected-date-text').text(info.dateStr);
-        }
-      });
-      calendar.render();
+$('#bookVehicleBtn').click(async (e) => {
+  e.preventDefault();
+  const veh = $('#vehicle-select').val();
+  const date = $('#booking-date').val();
+  const start = $('#booking-start').val();
+  const end = $('#booking-end').val();
+  const day = new Date(date).getDay();
+  if(day === 0 || day === 6) {
+    alert('Weekends are not bookable.');
+    return;
+  }
+  const bookingRef = push(ref(db, 'bookings/' + veh));
+  await set(bookingRef, {
+    userName: currentUser.email,
+    date, start, end,
+    startTimeISO: new Date(`${date} ${start}`).toISOString(),
+    endTimeISO: new Date(`${date} ${end}`).toISOString()
+  });
+  alert('Booking created!');
+  calendar.refetchEvents();
+});
+
+let calendar;
+
+function initCalendar() {
+  calendar = new FullCalendar.Calendar($('#calendar')[0], {
+    initialView: 'dayGridMonth',
+    events: fetchEvents,
+    dateClick: (info) => {
+      $('#booking-date').val(info.dateStr);
+      $('#selected-date-text').text(info.dateStr);
     }
+  });
+  calendar.render();
+}
 
-    async function fetchEvents(info, successCallback) {
-      const snap = await get(ref(db, `bookings/${$('#vehicle-select').val()}`));
-      const bookings = snap.val() || {};
-      successCallback(Object.values(bookings).map(b => ({
-        title: `${b.startTime} - ${b.endTime}`,
-        start: b.startTimeISO, end: b.endTimeISO, userName: b.userName
-      })));
-    }
+async function fetchEvents(info, successCallback) {
+  const veh = $('#vehicle-select').val();
+  const snap = await get(ref(db, `bookings/${veh}`));
+  const bookings = snap.val() || {};
+  const events = Object.values(bookings).map(b => ({
+    title: `${b.start} - ${b.end}`,
+    start: b.startTimeISO,
+    end: b.endTimeISO
+  }));
+  successCallback(events);
+}
 
-    async function isBookingOverlapping(vehicle, newStart, newEnd) {
-      const snap = await get(ref(db, `bookings/${vehicle}`));
-      if (!snap.exists()) return false;
-      return Object.values(snap.val()).some(b => newStart < new Date(b.endTimeISO) && newEnd > new Date(b.startTimeISO));
-    }
+$('#vehicle-select').change(() => {
+  updateHeading($('#vehicle-select').val());
+  calendar.refetchEvents();
+});
 
-    async function handleBooking() {
-      const vehicle = $('#vehicle-select').val();
-      const date = $('#booking-date').val();
-      const start = $('#booking-start').val();
-      const end = $('#booking-end').val();
-
-      const startTS = new Date(`${date} ${start}`).getTime();
-      const endTS = new Date(`${date} ${end}`).getTime();
-
-      if (new Date(date).getDay() % 6 === 0) return alert('Weekends not allowed.');
-      if (endTS <= startTS) return alert('End time must be after start time.');
-      if (await isBookingOverlapping(vehicle, new Date(startTS), new Date(endTS))) return alert('Booking overlaps.');
-
-      await set(push(ref(db, `bookings/${vehicle}`)), {
-        userName: currentUser.email, date, startTime: start, endTime: end,
-        startTimeISO: new Date(startTS).toISOString(),
-        endTimeISO: new Date(endTS).toISOString()
-      });
-
-      alert('Booking created!');
-      calendar.refetchEvents();
-    }
-
-    $('#booking-form').submit(e => { e.preventDefault(); handleBooking(); });
-
-    function updateHeading(vehicleName) {
-      $('#vehicle-schedule-heading').text(`${vehicleName} Schedule`);
-    }
-  </script>
+function updateHeading(vehicle) {
+  $('#vehicle-schedule-heading').text(`${vehicle} Schedule`);
+}
+</script>
 </body>
 </html>
